landing page almost done

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../CSS/news_scroll.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="../css/index.css">
     <script src="../comments.js"></script>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Oswald">
     <!-- <script src="//code.jquery.com/jquery.min.js"></script>
     <script>
         $.get("header.html", function(data){
@@ -34,6 +36,7 @@
         </div>
         <div class='search'>
             <input class='salt-search' type="text" placeholder="Go salt mining...">
+            <img src='../Media/shaker.png'>;
         </div>
         <!-- Script credits to: https://allwebco-templates.com/support/S_script_IFrame-NewsScroll.htm -->
         <!-- START SCROLLING NEWS WINDOW -->
