--- a/HTML/about.html
+++ b/HTML/about.html
@@ -5,8 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/about.css">
     <title>About</title>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Oswald">
 </head>
 <body>
-    
+    <header>
+        <div class='logo'>
+            <a href = #><img src= '../Media/face.png'></a>
+            <h1>got salt?</h1>
+        </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a> 
+            <a href="contact.html">Contact</a>
+            <a href="#">Login</a>
+        </nav>
+    </header>
+    <h2>About Us</h2>
+    <section class='gallery'>
+        <figure>
+            <img src='../Media/akhil.jpg'>
+            <figcaption><a class="s github" href="#" target="_blank"><i class="fab fa-github-square"></i></a> <span class='name'>Akhil Raju</span></figcaption>
+        </figure>
+        <figure>
+            <img src='../Media/charlie.jpg'>
+            <figcaption><a class="s github" href="https://github.com/charlupuhh" target="_blank"><i class="fab fa-github-square"></i></a> <span class='name'>Charlie Lu</span></figcaption>
+        </figure>
+        <figure>
+            <img src='../Media/francisco.jpg'>
+            <figcaption><a class="s github" href="https://github.com/lorischl-otter" target="_blank"><i class="fab fa-github-square"></i></a> <span class='name'>Francisco</span></figcaption>
+        </figure>
+        <figure>
+            <img src='../Media/james.png'>
+            <figcaption><a class="s github" href="https://github.com/JLC6290" target="_blank"><i class="fab fa-github-square"></i></a> <span class='name'>James Clark</span></figcaption>
+        </figure>
+        <figure>
+            <img src='../Media/jesse b.jpg'>
+            <figcaption><a class="s github" href="https://github.com/jberkow713" target="_blank"><i class="fab fa-github-square"></i></a> <span class='name'>Jesse Berkowitz</span></figcaption>
+        </figure>
+        <figure>
+            <img src='../Media/jesse m.jpg'>
+            <figcaption><a class="s github" href="https://github.com/jessemarek" target="_blank"><i class="fab fa-github-square"></i></a> <span class='name'>Jesse Marek</span></figcaption>
+        </figure>
+        <figure>
+            <img src='../Media/lori.jpg'>
+            <figcaption><a class="s github" href="https://github.com/lorischl-otter" target="_blank"><i class="fab fa-github-square"></i></a> <span class='name'>Lori Schlatter</span></figcaption>
+        </figure>
+        <figure>
+            <img src='../Media/mason.jpg'>
+            <figcaption><a class="s github" href="https://github.com/masonnystrom" target="_blank"><i class="fab fa-github-square"></i></a> <span class='name'>Mason Nystrom</span></figcaption>
+        </figure>
+    </section>
 </body>
 </html>
