--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,9 +23,9 @@
             <h1>got salt?</h1>
         </div>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a> 
-            <a href="#">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a> 
+            <a href="contact.html">Contact</a>
             <a href="#">Login</a>
         </nav>
     </header>
